@@ -1,4 +1,6 @@
 0.25
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Reference::Wikidata::ReferenceURL.
  - Add item to doc SEE ALSO section in
    Wikibase::Datatype::Value::Globecoordinate.
  - Add reference to
